--- a/virion.yml
+++ b/virion.yml
@@ -1,5 +1,5 @@
 name: libPiggyEconomy
 version: 3.0.0
-antigen: DaPigGuy\libPiggyEconomy
+antigen: supercrafter333\libPiggyEconomy
 api: 4.0.0
 author: DaPigGuy
